hphp/hack/test/typecheck/reserved_name14.php.exp
File "reserved_name14.php", line 5, characters 7-12:
String cannot be used as it is reserved. (Naming[2068])
