hphp/hack/test/typecheck/reserved_name14.php
<?hh

namespace Foo;

class String {}
